fixed layout issues in wizard

--- a/src/css/components/register.scss
+++ b/src/css/components/register.scss
@@ -37,7 +37,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    font-size: 20px;
+    font-size: 19px;
 }
 
 .filter-btn {
