--- a/src/css/components/wizard.scss
+++ b/src/css/components/wizard.scss
@@ -1,3 +1,5 @@
+
+
 .step-header {
     display: flex;
     justify-content: space-between;
@@ -66,6 +68,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    height: 100%;
     max-width: 550px;
     margin-left: auto;
     margin-right: auto;
