--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -122,10 +122,11 @@ header {
 .form-body {
   margin-left: auto;
   margin-right: auto;
-  background-color: white;
-  max-width: 850px;
-  padding: 20px;
-  height: 100vh; }
+  min-height: 900px;
+  max-width: 719px;
+  height: 100%;
+  background: linear-gradient(180deg, #e2f3ea, #fff);
+  padding: 20px; }
 
 .divider {
   display: block;
@@ -160,7 +161,7 @@ header {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  font-size: 20px; }
+  font-size: 19px; }
 
 .filter-btn {
   width: 70px;
@@ -290,6 +291,7 @@ header {
   display: flex;
   flex-direction: column;
   width: 100%;
+  height: 100%;
   max-width: 550px;
   margin-left: auto;
   margin-right: auto; }
